Fix align text in tag.

--- a/app/assets/stylesheets/block.css.scss
+++ b/app/assets/stylesheets/block.css.scss
@@ -57,13 +57,13 @@ section.block {
     li {
       display: inline-block;
       margin-right: 5px;
-      line-height: 30px;
+      line-height: 24px;
 
       a {
         display: inline-block;
         height: 20px;
         font-size: 16px;
-        line-height: 22px;
+        line-height: 19px;
         background: $lightGreen;
         border-radius: 1px;
         color: #fff;
